basic hugging face implementation

--- a/Hugging_face'/HuggingFAce.ipynb
+++ b/Hugging_face'/HuggingFAce.ipynb
@@ -177,9 +177,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "925cdd0d-3786-4340-b784-759dc5fa97d5",
+   "metadata": {},
+   "source": [
+    "# Tokenization"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34193f51-b45d-4210-bd16-08c3d14e028a",
+   "id": "76dc92d0-ea16-4571-8397-4b0bcab5563c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer, AutoModelForSequenceClassification, DistilBertTokenizer, DistilBertTokenizer, DistilBertForSequenceClassification\n",
+    "model_name1 = 'distilbert-base-uncased-finetuned-sst-2-english'\n",
+    "mytokenizer1 = DistilBertTokenizer.from_pretrained(model_name1)\n",
+    "mymodel1 = DistilBertForSequenceClassification.from_pretrained(model_name1)\n",
+    "\n",
+    "classifier = pipeline('sentiment-analysis', model = mymodel1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6e544f53-8d1a-4c23-bd29-767f470418f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use cpu\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'label': '2 stars', 'score': 0.5099302530288696}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import pipeline, AutoTokenizer, AutoModelForSequenceClassification, DistilBertTokenizer, DistilBertForSequenceClassification\n",
+    "\n",
+    "model_name2 = \"nlptown/bert-base-multilingual-uncased-sentiment\"\n",
+    "mymodel2 = AutoModelForSequenceClassification.from_pretrained(model_name2)\n",
+    "mytokenizer2 = AutoTokenizer.from_pretrained(model_name2)\n",
+    "\n",
+    "classifier = pipeline(\"sentiment-analysis\", model = mymodel2 , tokenizer = mytokenizer2)\n",
+    "res = classifier(\"I was so not happy with the Barbie Movie\")\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c51d1d7-cb4e-40eb-9023-96aec0100fd2",
    "metadata": {},
    "outputs": [],
    "source": []
